Add JVM argument to enable pinned threads tracing in test tasks